# pci-info

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CI-Rust-Stable.yml
examples/: enumpci-linux-fastest.rs  enumpci-windows-wmi.rs  enumpci.rs  read-pci-header.rs
src/: lib.rs  macros.rs  pci_bus_number.rs  pci_device.rs  pci_info.rs  pci_location.rs  pci_property_result.rs
src/enumerators/: mod.rs
src/enumerators/freebsd/: mod.rs  pcidev.rs
src/enumerators/linux/: mod.rs  proc_fs.rs
src/enumerators/macos/: iokit.rs  mod.rs
src/enumerators/windows/: common.rs  mod.rs  setupapi.rs  wmi.rs
src/error/: mod.rs  pci_info_enumeration_error.rs  pci_info_error.rs  pci_info_error_string.rs
src/pci_enums/: device_class.rs  device_interface_func.rs  device_subclass.rs  mod.rs
src/pci_headers/: mod.rs  pci_common_header.rs  pci_config_buffer.rs  pci_generic_device_header.rs  pci_specialized_header.rs  pci_to_cardbus_bridge_header.rs  pci_to_pci_bridge_header.rs
test-data/linux/aarch64/pci/: devices
test-data/linux/aarch64/pci/0000$00/: 01.5  01.6  01.7  02.1  02.2  02.5  02.6
test-data/linux/aarch64/pci/0000$03/: 00.0
test-data/linux/aarch64/pci/0000$05/: 00.0
test-data/linux/aarch64/pci/0000$08/: 00.0
test-data/linux/aarch64/pci/0000:00/: 00.0  01.0  01.1  01.2  01.3  01.4  02.0  02.3  02.4
test-data/linux/aarch64/pci/0000:01/: 00.0
test-data/linux/aarch64/pci/0000:02/: 01.0
test-data/linux/aarch64/pci/0000:04/: 00.0
test-data/linux/aarch64/pci/0000:06/: 00.0
test-data/linux/aarch64/pci/0000:07/: 00.0
test-data/linux/aarch64/pci/0000:09/: 00.0
test-data/linux/amd64/pci/: devices
test-data/linux/amd64/pci/00/: 00.0  00.2  01.1  01.2  02.1  02.2  02.4  08.0  08.1  14.0  14.3  18.0  18.1  18.2  18.3  18.4  18.5  18.6  18.7
test-data/linux/amd64/pci/01/: 00.0  00.1
test-data/linux/amd64/pci/02/: 00.0
test-data/linux/amd64/pci/03/: 00.0
test-data/linux/amd64/pci/04/: 00.0
test-data/linux/amd64/pci/05/: 00.0
test-data/linux/amd64/pci/06/: 00.0  00.2  00.3  00.4  00.5  00.6
tools/: check_readyness.sh  gen_classes.ers
