[package]
name = "pci-info"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/xanathar/pci-info"
readme = "README.md"
keywords = ['pci', 'device', 'hardware']
categories = ["hardware-support", "os"]
authors = ["Marco Mastropaolo <marco@mastropaolo.com>"]

[dependencies]

[dev-dependencies]
paste = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { git = "https://github.com/servo/core-foundation-rs" }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13.3"
windows = { version = "0.56.0", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System",
    "Win32_System_Registry",
]}

[features]
pci_class_debug_strings = []
pci_subclass_debug_strings = []
pci_interface_func_debug_strings = []
default = ["pci_class_debug_strings", "pci_subclass_debug_strings", "pci_interface_func_debug_strings"]
