[package]
name = "pci-info"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xanathar/pci-info"
readme = "README.md"
keywords = ['pci', 'device', 'hardware']
categories = ["hardware-support", "os"]
authors = ["Marco Mastropaolo <marco@mastropaolo.com>"]
description = "A crate to enumerate PCI devices on desktop operating systems and/or parse PCI configuration headers"

[dependencies]

[dev-dependencies]
paste = "1.0"

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = { version = "0.15", optional = true }
windows = { version = "0.58", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System",
    "Win32_System_Registry",
]}

[features]
pci_class_debug_strings = []
pci_subclass_debug_strings = []
pci_interface_func_debug_strings = []
default = ["pci_class_debug_strings", "pci_subclass_debug_strings", "pci_interface_func_debug_strings"]
enum_win32_wmi = ["dep:wmi"]

